Se agrego un resumen de mi CV

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
   <div class="container mt-5">
     <div class="row">
       <div class="col">
-        <h1>Eduardo Sebastian</h1>
         <h1>Cortez Abril</h1>
+        <h1>Eduardo Sebastian</h1>
+        <h1>Soy un estudiante de software que le gusta mucho la musica el deporte y tengo 22 años de edad, soy de la ciduad de Ambato|Ecuador</h1>
       </div>
     </div>
   </div>
